--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <import type="java.lang.Integer"/>
@@ -9,60 +9,62 @@
                 type="com.global.test.globaltest.ui.MainViewModel"/>
     </data>
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
-            android:orientation="vertical"
             android:layout_margin="40dp">
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/response_code"/>
+                android:text="@string/response_code"
+                android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
                 android:id="@+id/response_code"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        <LinearLayout
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:orientation="horizontal">
+                tools:text="code"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
+                android:layout_marginTop="8dp"/>
 
-            <TextView
-                    android:text="@string/times_fetched"
-                    android:layout_width="96dp"
-                    android:layout_height="wrap_content"/>
 
-            <TextView
-                    android:id="@+id/times_fetched"
-                    android:layout_marginStart="4dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+        <TextView
+                android:text="@string/times_fetched"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/response_code"
+                android:layout_marginTop="32dp"/>
 
-        </LinearLayout>
+        <TextView
+                android:id="@+id/times_fetched"
+                android:layout_width="wrap_content"
+                tools:text="0"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/textView2"
+                android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/textView2"/>
+
 
         <Button
                 android:id="@+id/button"
                 android:text="@string/fetch_content"
-                android:layout_marginTop="40dp"
-                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> viewmodel.fetchCode()}"/>
+                android:onClick="@{() -> viewmodel.fetchCode()}"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
 
 
         <CheckBox
                 android:id="@+id/delayCheckBox"
                 android:text="@string/add_delay"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
                 android:onCheckedChanged="@{(v, c) -> viewmodel.setDelay(c)}"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/button"/>
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 </layout>
